fixed home, contact, and about and general updates, as well as fixed toggle menu on mobile

--- a/src/app/home-component/home-component.component.css
+++ b/src/app/home-component/home-component.component.css
@@ -1,3 +1,43 @@
 .name {
     background-color: transparent !important;
+    color: black;
+    padding: 2px 30px!important;
+}
+
+.name-container {
+    white-space: nowrap;
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+.logo {
+    background-attachment: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    min-height: 100%;
+    background-image: url('/assets/images/1_o_eCb5L3hkibaE4UyKM2dA.jpeg');
+    background-size: cover;
+    background-attachment: scroll;
+    min-height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.blur {
+    background-image: url('/assets/images/1_o_eCb5L3hkibaE4UyKM2dA.jpeg');
+	background-size: cover;
+	-webkit-filter: blur(10px);
+  	-moz-filter: blur(10px);
+  	-o-filter: blur(10px);
+  	-ms-filter: blur(10px);
+  	filter: blur(10px);
+
+	height: 100%;
+	opacity: 0;
 }
